@@ -1,0 +1,25 @@
+<?php
+global $fckg_lang;
+
+$fckg_lang['btn_dw_edit'] = "Modifica DW";
+$fckg_lang['dw_btn_fck_preview']= "Anteprima FCK";
+$fckg_lang['dw_btn_lang']= "Lingua";
+$fckg_lang['title_dw_delete'] = "Elimina pagina";
+$fckg_lang['title_dw_edit'] = "Salva, Esci e passa all'editor nativo di DokuWiki";
+$fckg_lang['dw_btn_revert'] = "Ripristina";
+$fckg_lang['title_dw_revert'] = "Ripristina il backup precedente";
+$fckg_lang['title_dw_lang']= "Seleziona lingua per controllo ortografico";
+$fckg_lang['title_dw_cancel']= "Uscita editor";
+$fckg_lang['btn_fck_edit'] = "Modifica FCK";
+$fckg_lang['confirm_delete'] = "Sei sicuro di voler eliminare questa pagina?";
+$fckg_lang['confirm_preview'] = "I dati non salvati andranno persi.";
+
+$fckg_lang['dw_btn_backup'] = "Backup";
+$fckg_lang['title_dw_backup'] ="Finestra backup editor & Rinnovo blocco";
+$fckg_lang['backup_empty'] = "Il buffer di backup sembra essere vuoto. Vuoi continuare?";
+$fckg_lang['btn_draft'] = "Visualizza bozza";
+$fckg_lang['title_draft'] = "Visualizza, Mostra, Modifica bozza";
+$fckg_lang['btn_exit_draft'] = "Uscita bozza";
+$fckg_lang['title_draft'] = "Visualizza, Mostra, Modifica bozza";
+$fckg_lang['title_exit_draft'] = "Torna al documento attuale";
+$fckg_lang['draft_msg']= "Questo documento contiene un file bozza. Il tasto bozza permette di passare da questo documento alla bozza. Puoi modificare e salvare uno dei due documenti.";
