@@ -1,4 +1,28 @@
 <?php
 
-$lang['groups'] = "Lista dei gruppi con permesso inabilitare serratura-temporizzatore";
-$lang['middot'] = "Lista dei gruppi che usando &amp;middot; per &amp;nbsp;";
+$lang['groups'] = "Gruppo autorizzato a disabilitare il blocco timer (deprecato)";
+$lang['middot'] = "Elenco di gruppi, separati da virgole, &amp;middot; per &amp;nbsp;";
+$lang['big_files'] = "Verifica in sicurezza della modifica dei files sovradimensionati";
+$lang['big_file_sz'] = "Dimensione files sovradimensionati (bytes)";
+$lang['big_file_tm'] = "L'elaborazione del file sovradimensionato scadrà dopo (secondi):";
+$lang['fck_preview'] = "Gruppo anteprima FCK";
+$lang['guest_toolbar'] = "Mostra la barra strumenti agli Ospiti";
+$lang['guest_media'] = "Gli ospiti possono vedere i files in Media";
+$lang['open_upload'] = "Gli ospiti possono usare la funzione Carica";
+$list = plugin_list('syntax');
+$list = implode  (", "  , $list);  
+$lang['xcl_plugins'] ="Elenco dei plugin, separati da virgole, con Sintassi Immutabile. " .
+      "Il loro nome dovrebbe essere esattamente come compare nella lista dei plugin attualmente installati: $list";
+$lang['default_fb'] = "Accesso navigazione file predefinita. Se 'none', non si applica la modalità ACL.";
+$lang['openfb'] = "Navigazione files. Questo consente all'utente di accedere all'intera struttura delle directory, anche se l'utente non ha i permessi necessari. Le ACL si applicano ancora alla funzione Carica.";
+#$lang['csrf'] = "Se ricevi un avviso CSRF, verifica questa casella.";
+$lang['dw_edit_display'] = "Controlla quali utenti hanno accesso al tasto 'Modifica DW'. Scelte: 'all' per tutti gli utenti; 'admin' solo per amministratori e gestori; 'none' per nessuno. Il valore predefinito è 'all'.";
+$lang['smiley_as_text']  = "Mostra gli smileys come testo in FCKeditor (sarà ancora mostrata l'immagine nel browser)";
+$lang['editor_bak'] = "Salva backup in meta/&lt;namespace&gt;.fckg";
+$lang['create_folder'] = "Abilita tasto creazione cartella nella gestione file (y/n)";
+$lang['dwedit_ns'] = "Elenco delle categorie, separate da virgole, dove FckgLite si applica in automatico " .
+                     "sull'editor nativo di DokuWiki."; 
+$lang['acl_del'] =  "Utenti predefiniti (casella non spuntata) con permessi di caricamento per eliminare i files; se la casella è spuntata, allora l'utente necessita dei permessi di cancellazione per eliminare la cartella.";
+$lang['auth_ci'] = "L'ID utente di accesso è 'case insensitive', ciò significa che si può accedere sia con UTENTE che utente";
+$lang['nix_style'] = "Per server Windows (Vista e successivi).  Questa impostazione permette di accedere a data\\media attraverso fckg\\fckeditor\\userfiles, se i collegamenti a media e file sono stati creati correttamente in userfiles";
+$lang['no_symlinks']  = "Disabilita creazione automatica dei collegamenti simbolici in fckg/userfiles.";
