@@ -1,4 +1,4 @@
-rev 12-Feb_06-14_15
+rev 12-Feb_16-11_29
 
 8 Sep
 This distribution marks the changeover to a single distribution of fckgLite based on the jQuery branch of fckgLiteSafe.
@@ -110,3 +110,6 @@ Fixed bug in edit.php which converted https links to  internal DW links
 6 Feb 2012
 Placed space after closing </sup>.  Insures space between footnote and following text (but may add unwelcome space
 after a superscript character inside a string).
+
+16 Feb 2012
+Italian language files contributed for settings and fckgLite GUI.  German GUI lang file updated.
